--- a/show/.git-rc
+++ b/show/.git-rc
@@ -9,6 +9,7 @@ alias gsard="g sard"
 alias gsh="g sh"
 alias gsh1="g sh1"
 alias gsh2="g sh2"
+alias gshm="g shm"
 alias gshmr="g shmr"
 alias gshms="g shms"
 alias gshno="g shno"
