--- a/github/.git-rc
+++ b/github/.git-rc
@@ -77,6 +77,7 @@ defn ghossa github_open_settings_secrets_actions
 defn ghow github-open-web.py
 defn ghowd github-open-web.py -d
 defn ghowg github-open-web.py -g  # open gist
+defn ghowr github-open-web.py -r  # open specific remote
 defn ghowb gh repo view --web -b
 defn ghob gh repo view --web -b
 
