--- a/github/.git-rc
+++ b/github/.git-rc
@@ -536,3 +536,7 @@ alias ghui='gh-upload-img.py'         # upload images to GitHub
 alias prv='gh pr view'
 alias pre='gh pr edit'
 alias ghgf="github-gist-file.py"
+alias ghpm="github-placeholder-main.py"
+alias ghpom="github-placeholder-main.py"
+
+export gw=.github/workflows
