`pu = push-user-branch`

--- a/push/.git-rc
+++ b/push/.git-rc
@@ -43,6 +43,8 @@ alias gpto="g pto"
 alias gptn="g ptn"
 alias gpu="g pu"
 alias gpub="g pub"
+alias gpuf="g puf"
+alias gpun="g pun"
 alias gpbf="g pbf"
 alias gpbn="g pbn"
 alias gpubf="g pubf"
