`cec = create-empty-commit`

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -60,6 +60,7 @@ alias gcapm="g capm"
 alias gcaapm="g caapm"
 alias gcpam="g cpam"
 alias gcpau="g cpau"
+alias gcec="g cec"
 alias gcpp="g cpp"
 alias gcppa="g cppa"
 alias gcppam="g cppam"
