`graph -H`: omit commit SHAs

--- a/graph/.git-rc
+++ b/graph/.git-rc
@@ -25,6 +25,7 @@ alias ggrdh="g grdh"
 alias ggrdn="g grdn"
 alias ggrh="g grh"
 alias ggrhu="g grhu"
+alias ggrH="g grH"
 alias ggrl="g grl"
 alias ggrn="g grn"
 alias ggru="g gru"
