`graph -t`: include worktree SHAs

--- a/graph/.git-rc
+++ b/graph/.git-rc
@@ -28,4 +28,6 @@ alias ggrhu="g grhu"
 alias ggrH="g grH"
 alias ggrl="g grl"
 alias ggrn="g grn"
+alias ggrt="g grt"
+alias ggrth="g grth"
 alias ggru="g gru"
