`dcsw = diff --cached --stat -w`

--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -19,7 +19,9 @@ alias gdft="g dft"
 alias gdc="g dc"
 alias gdcp="g dcp"
 alias gdcss="g dcss"
+alias gdcsw="g dcsw"
 alias gdcw="g dcw"
+alias gdcws="g dcws"
 alias gdg="g dg"
 alias gdgif="g dgif"
 alias gdh="g dh"
