`graph -H` alias fixes

--- a/graph/.git-rc
+++ b/graph/.git-rc
@@ -24,10 +24,11 @@ alias ggrec="g grec"
 alias ggrdh="g grdh"
 alias ggrdn="g grdn"
 alias ggrh="g grh"
+alias ggrht="g grht"
 alias ggrhu="g grhu"
-alias ggrH="g grH"
 alias ggrl="g grl"
 alias ggrn="g grn"
+alias ggrs="g grs"
 alias ggrt="g grt"
 alias ggrth="g grth"
 alias ggru="g gru"
