More `remove-trailing-spaces` aliases

--- a/grep/.git-rc
+++ b/grep/.git-rc
@@ -18,5 +18,10 @@ alias gkl="g kl"
 alias gpie="g pie"
 alias grts="g rts"
 alias rts="g rts"
+alias grtss="g rtss"
+alias grtsu="g rtsu"
+alias rtu="g rtsu"
+alias grtsa="g rtsa"
+alias rta="g rtsa"
 
 alias gcs3="g cs3"
