`shwf = show -w --format=fuller`

--- a/show/.git-rc
+++ b/show/.git-rc
@@ -29,6 +29,7 @@ alias gshs="g shs"
 alias gshsl="g shsl"
 alias gshss="g shss"
 alias gshw="g shw"
+alias gshwf="g shwf"
 alias gsn="g sn"
 alias gsno="g sno"
 alias gsns="g sns"
