--- a/show/.gitconfig
+++ b/show/.gitconfig
@@ -28,6 +28,7 @@
   shsl = show --submodule=log
   shss = show --submodule=short
   shw = show -w
+  shwf = show -w --format=fuller
   sn = show-names
   sln = show-local-names
   snl = show-local-names
