--- a/grep/.git-rc
+++ b/grep/.git-rc
@@ -18,6 +18,7 @@ alias gkl="g kl"
 alias gpie="g pie"
 alias grts="g rts"
 alias rts="g rts"
+alias rt="g rts"
 alias grtss="g rtss"
 alias grtsu="g rtsu"
 alias rtu="g rtsu"
