--- a/github/.git-rc
+++ b/github/.git-rc
@@ -542,12 +542,15 @@ alias ghpro='github-pr.py open'       # create/open new PR from draft
 alias ghpron='github-pr.py open -n'   # dry-run: show what PR would be created
 alias ghprc='github-pr.py clone'      # clone existing PR
 alias ghprp='github-pr.py push'       # push to PR (auto-adds footer if gist exists)
+alias ghprpn='github-pr.py push -n'   # dry-run push
 alias ghprl='github-pr.py pull'       # pull from PR (and optionally push back)
 alias ghprpg='github-pr.py push -g'   # push with gist backup (auto-footer)
 alias ghprpo='github-pr.py push -o'   # push and open in browser
 alias ghprpF='github-pr.py push -F'   # push WITHOUT footer
 alias ghprd='github-pr.py diff'       # diff local vs remote PR
 alias ghpru='github-pr.py upload'     # upload images to PR's gist
+alias ghprs='github-pr.py sync'       # sync/update PR clones to new naming
+alias ghprsn='github-pr.py sync -n'   # dry-run sync
 alias ghui='gh-upload-img.py'         # upload images to GitHub
 alias prv='gh pr view'
 alias pre='gh pr edit'
