`gopr=github-open-pr.py`

--- a/github/.git-rc
+++ b/github/.git-rc
@@ -540,6 +540,8 @@ alias ghpr='github-pr.py'             # main github-pr.py command
 alias ghpri='github-pr.py init'       # initialize new PR draft
 alias ghpro='github-pr.py open'       # open existing PR in browser
 alias ghprog='github-pr.py open -g'   # open gist in browser
+alias ghopr='github-open-pr.py'       # open PR for current branch
+alias gopr='github-open-pr.py'        # open PR for current branch
 alias ghprcr='github-pr.py create'    # create new PR from DESCRIPTION.md
 alias ghprcrn='github-pr.py create -n' # dry-run: show what PR would be created
 alias ghprsh='github-pr.py show'      # show PR and gist URLs
