--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -41,6 +41,7 @@ alias grbd="g rbd"
 alias grbi="g rbi"
 alias grd="g rd"
 alias grds="g rds"
+alias gret="g ret"
 alias grba="g rba"
 alias grbc="g rbc"
 alias grbh="g rbh"
