--- a/.git-rc
+++ b/.git-rc
@@ -72,7 +72,7 @@ append_subdir_to_path \
   git-filter-repo \
   gist github gitlab graph grep \
   help \
-  log ls \
+  lint log ls \
   merge merge-base mv \
   nav \
   pull push \
