`rmb = rebase-merge-base`, handle subshell failures

--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -60,6 +60,7 @@ alias grbs="g rbs"
 alias rbo="g rbo"
 alias grio="g rio"
 alias grlrb="g rlrb"
+alias grmb="g rmb"
 alias grn="g rn"
 alias grni="g rni"
 alias grnin="g rnin"
