restore `twa = throw.py -a` and aliases

--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -118,7 +118,12 @@ alias gsrw="g srw"
 alias gswr="g swr"
 
 alias gtw="g tw"
-alias gtw="g tw"
+alias gtwa="g twa"
+alias gtwap="g twap"
+alias gtwap2="g twap2"
+alias gtwap3="g twap3"
+alias gtwap4="g twap4"
+alias gtwap5="g twap5"
 alias gtwp="g twp"
 alias gtwp2="g twp2"
 alias gtwp3="g twp3"
