`dp2p = diff HEAD~2..HEAD^`

--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -38,6 +38,7 @@ alias gdns="g dns"
 alias gdp1="g dp1"
 alias gdp2="g dp2"
 alias gdph="g dph"
+alias gdp2p="g dp2p"
 alias gdq="g dq"
 alias gdqc="g dqc"
 alias gds="g ds"
