git config: add sae/gsae aliases for set-author-email
Add aliases for setting just the email (wraps set-id):
- sae = set-id (email-only)
- gsae = set-id -g (global email-only)
- saeg = set-id -g (alternate ordering)

Also add bash wrappers: gsae, gsaeg, ggsae

--- a/config/.git-rc
+++ b/config/.git-rc
@@ -120,6 +120,9 @@ alias gsig="g sig"
 alias gsgid="g sgid"
 alias ggsid="g gsid"
 alias gsidg="g sidg"
+alias gsae="g sae"
+alias gsaeg="g saeg"
+alias ggsae="g gsae"
 alias ggid="g gid"
 alias ggidg="g gidg"
 alias gggid="g ggid"
