`gopp="gh gist create --web -p"`

--- a/gist/.git-rc
+++ b/gist/.git-rc
@@ -2,6 +2,7 @@ alias ghg="gh gist"
 alias ggc="gh gist create"
 alias ghgc="gh gist create"
 alias gop="gh gist create --web"
+alias gopp="gh gist create --web -p"
 alias ghgcd="gh gist create --web -d"
 alias gsto="gh gist create --web -d"
 alias ggcdn="gh gist create -d"
